Add files for testing

--- a/examples/file_readwrite.ipynb
+++ b/examples/file_readwrite.ipynb
@@ -91,7 +91,7 @@
     {
      "data": {
       "text/plain": [
-       "<crystal_functions.file_readwrite.Crystal_output at 0x107b4ae50>"
+       "<crystal_functions.file_readwrite.Crystal_output at 0x107d580a0>"
       ]
      },
      "execution_count": 4,
@@ -155,102 +155,54 @@
       " [[[0.0, 2.12011000819, 2.12011000819], [2.12011000819, 0.0, 2.12011000819], [2.12011000819, 2.12011000819, 0.0]], [12, 8], [[0.0, 0.0, 0.0], [2.12011000819, 2.12011000819, 2.12011000819]]] \n",
       "\n",
       "Symmetry operators = \n",
-      " [['1.00' '0.00' '0.00' '0.00' '1.00' '0.00' '0.00' '0.00' '1.00' '0.00'\n",
-      "  '0.00' '0.00']\n",
-      " ['0.00' '1.00' '0.00' '1.00' '0.00' '0.00' '-1.00' '-1.00' '-1.00'\n",
-      "  '0.00' '0.00' '0.00']\n",
-      " ['-1.00' '-1.00' '-1.00' '0.00' '0.00' '1.00' '0.00' '1.00' '0.00'\n",
-      "  '0.00' '0.00' '0.00']\n",
-      " ['0.00' '0.00' '1.00' '-1.00' '-1.00' '-1.00' '1.00' '0.00' '0.00'\n",
-      "  '0.00' '0.00' '0.00']\n",
-      " ['0.00' '0.00' '1.00' '1.00' '0.00' '0.00' '0.00' '1.00' '0.00' '0.00'\n",
-      "  '0.00' '0.00']\n",
-      " ['0.00' '1.00' '0.00' '0.00' '0.00' '1.00' '1.00' '0.00' '0.00' '0.00'\n",
-      "  '0.00' '0.00']\n",
-      " ['1.00' '0.00' '0.00' '0.00' '0.00' '1.00' '-1.00' '-1.00' '-1.00'\n",
-      "  '0.00' '0.00' '0.00']\n",
-      " ['1.00' '0.00' '0.00' '-1.00' '-1.00' '-1.00' '0.00' '1.00' '0.00'\n",
-      "  '0.00' '0.00' '0.00']\n",
-      " ['-1.00' '-1.00' '-1.00' '0.00' '1.00' '0.00' '1.00' '0.00' '0.00'\n",
-      "  '0.00' '0.00' '0.00']\n",
-      " ['0.00' '0.00' '1.00' '0.00' '1.00' '0.00' '-1.00' '-1.00' '-1.00'\n",
-      "  '0.00' '0.00' '0.00']\n",
-      " ['0.00' '1.00' '0.00' '-1.00' '-1.00' '-1.00' '0.00' '0.00' '1.00'\n",
-      "  '0.00' '0.00' '0.00']\n",
-      " ['-1.00' '-1.00' '-1.00' '1.00' '0.00' '0.00' '0.00' '0.00' '1.00'\n",
-      "  '0.00' '0.00' '0.00']\n",
-      " ['0.00' '-1.00' '0.00' '-1.00' '0.00' '0.00' '0.00' '0.00' '-1.00'\n",
-      "  '0.00' '0.00' '0.00']\n",
-      " ['-1.00' '0.00' '0.00' '0.00' '-1.00' '0.00' '1.00' '1.00' '1.00' '0.00'\n",
-      "  '0.00' '0.00']\n",
-      " ['0.00' '0.00' '-1.00' '1.00' '1.00' '1.00' '0.00' '-1.00' '0.00' '0.00'\n",
-      "  '0.00' '0.00']\n",
-      " ['1.00' '1.00' '1.00' '0.00' '0.00' '-1.00' '-1.00' '0.00' '0.00' '0.00'\n",
-      "  '0.00' '0.00']\n",
-      " ['-1.00' '0.00' '0.00' '0.00' '0.00' '-1.00' '0.00' '-1.00' '0.00'\n",
-      "  '0.00' '0.00' '0.00']\n",
-      " ['0.00' '0.00' '-1.00' '0.00' '-1.00' '0.00' '-1.00' '0.00' '0.00'\n",
-      "  '0.00' '0.00' '0.00']\n",
-      " ['0.00' '0.00' '-1.00' '-1.00' '0.00' '0.00' '1.00' '1.00' '1.00' '0.00'\n",
-      "  '0.00' '0.00']\n",
-      " ['1.00' '1.00' '1.00' '-1.00' '0.00' '0.00' '0.00' '-1.00' '0.00' '0.00'\n",
-      "  '0.00' '0.00']\n",
-      " ['0.00' '-1.00' '0.00' '1.00' '1.00' '1.00' '-1.00' '0.00' '0.00' '0.00'\n",
-      "  '0.00' '0.00']\n",
-      " ['0.00' '-1.00' '0.00' '0.00' '0.00' '-1.00' '1.00' '1.00' '1.00' '0.00'\n",
-      "  '0.00' '0.00']\n",
-      " ['1.00' '1.00' '1.00' '0.00' '-1.00' '0.00' '0.00' '0.00' '-1.00' '0.00'\n",
-      "  '0.00' '0.00']\n",
-      " ['-1.00' '0.00' '0.00' '1.00' '1.00' '1.00' '0.00' '0.00' '-1.00' '0.00'\n",
-      "  '0.00' '0.00']\n",
-      " ['-1.00' '0.00' '0.00' '0.00' '-1.00' '0.00' '0.00' '0.00' '-1.00'\n",
-      "  '0.00' '0.00' '0.00']\n",
-      " ['0.00' '-1.00' '0.00' '-1.00' '0.00' '0.00' '1.00' '1.00' '1.00' '0.00'\n",
-      "  '0.00' '0.00']\n",
-      " ['1.00' '1.00' '1.00' '0.00' '0.00' '-1.00' '0.00' '-1.00' '0.00' '0.00'\n",
-      "  '0.00' '0.00']\n",
-      " ['0.00' '0.00' '-1.00' '1.00' '1.00' '1.00' '-1.00' '0.00' '0.00' '0.00'\n",
-      "  '0.00' '0.00']\n",
-      " ['0.00' '0.00' '-1.00' '-1.00' '0.00' '0.00' '0.00' '-1.00' '0.00'\n",
-      "  '0.00' '0.00' '0.00']\n",
-      " ['0.00' '-1.00' '0.00' '0.00' '0.00' '-1.00' '-1.00' '0.00' '0.00'\n",
-      "  '0.00' '0.00' '0.00']\n",
-      " ['-1.00' '0.00' '0.00' '0.00' '0.00' '-1.00' '1.00' '1.00' '1.00' '0.00'\n",
-      "  '0.00' '0.00']\n",
-      " ['-1.00' '0.00' '0.00' '1.00' '1.00' '1.00' '0.00' '-1.00' '0.00' '0.00'\n",
-      "  '0.00' '0.00']\n",
-      " ['1.00' '1.00' '1.00' '0.00' '-1.00' '0.00' '-1.00' '0.00' '0.00' '0.00'\n",
-      "  '0.00' '0.00']\n",
-      " ['0.00' '0.00' '-1.00' '0.00' '-1.00' '0.00' '1.00' '1.00' '1.00' '0.00'\n",
-      "  '0.00' '0.00']\n",
-      " ['0.00' '-1.00' '0.00' '1.00' '1.00' '1.00' '0.00' '0.00' '-1.00' '0.00'\n",
-      "  '0.00' '0.00']\n",
-      " ['1.00' '1.00' '1.00' '-1.00' '0.00' '0.00' '0.00' '0.00' '-1.00' '0.00'\n",
-      "  '0.00' '0.00']\n",
-      " ['0.00' '1.00' '0.00' '1.00' '0.00' '0.00' '0.00' '0.00' '1.00' '0.00'\n",
-      "  '0.00' '0.00']\n",
-      " ['1.00' '0.00' '0.00' '0.00' '1.00' '0.00' '-1.00' '-1.00' '-1.00'\n",
-      "  '0.00' '0.00' '0.00']\n",
-      " ['0.00' '0.00' '1.00' '-1.00' '-1.00' '-1.00' '0.00' '1.00' '0.00'\n",
-      "  '0.00' '0.00' '0.00']\n",
-      " ['-1.00' '-1.00' '-1.00' '0.00' '0.00' '1.00' '1.00' '0.00' '0.00'\n",
-      "  '0.00' '0.00' '0.00']\n",
-      " ['1.00' '0.00' '0.00' '0.00' '0.00' '1.00' '0.00' '1.00' '0.00' '0.00'\n",
-      "  '0.00' '0.00']\n",
-      " ['0.00' '0.00' '1.00' '0.00' '1.00' '0.00' '1.00' '0.00' '0.00' '0.00'\n",
-      "  '0.00' '0.00']\n",
-      " ['0.00' '0.00' '1.00' '1.00' '0.00' '0.00' '-1.00' '-1.00' '-1.00'\n",
-      "  '0.00' '0.00' '0.00']\n",
-      " ['-1.00' '-1.00' '-1.00' '1.00' '0.00' '0.00' '0.00' '1.00' '0.00'\n",
-      "  '0.00' '0.00' '0.00']\n",
-      " ['0.00' '1.00' '0.00' '-1.00' '-1.00' '-1.00' '1.00' '0.00' '0.00'\n",
-      "  '0.00' '0.00' '0.00']\n",
-      " ['0.00' '1.00' '0.00' '0.00' '0.00' '1.00' '-1.00' '-1.00' '-1.00'\n",
-      "  '0.00' '0.00' '0.00']\n",
-      " ['-1.00' '-1.00' '-1.00' '0.00' '1.00' '0.00' '0.00' '0.00' '1.00'\n",
-      "  '0.00' '0.00' '0.00']\n",
-      " ['1.00' '0.00' '0.00' '-1.00' '-1.00' '-1.00' '0.00' '0.00' '1.00'\n",
-      "  '0.00' '0.00' '0.00']] \n",
+      " [[ 1.  0.  0.  0.  1.  0.  0.  0.  1.  0.  0.  0.]\n",
+      " [ 0.  1.  0.  1.  0.  0. -1. -1. -1.  0.  0.  0.]\n",
+      " [-1. -1. -1.  0.  0.  1.  0.  1.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  1. -1. -1. -1.  1.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  1.  1.  0.  0.  0.  1.  0.  0.  0.  0.]\n",
+      " [ 0.  1.  0.  0.  0.  1.  1.  0.  0.  0.  0.  0.]\n",
+      " [ 1.  0.  0.  0.  0.  1. -1. -1. -1.  0.  0.  0.]\n",
+      " [ 1.  0.  0. -1. -1. -1.  0.  1.  0.  0.  0.  0.]\n",
+      " [-1. -1. -1.  0.  1.  0.  1.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  1.  0.  1.  0. -1. -1. -1.  0.  0.  0.]\n",
+      " [ 0.  1.  0. -1. -1. -1.  0.  0.  1.  0.  0.  0.]\n",
+      " [-1. -1. -1.  1.  0.  0.  0.  0.  1.  0.  0.  0.]\n",
+      " [ 0. -1.  0. -1.  0.  0.  0.  0. -1.  0.  0.  0.]\n",
+      " [-1.  0.  0.  0. -1.  0.  1.  1.  1.  0.  0.  0.]\n",
+      " [ 0.  0. -1.  1.  1.  1.  0. -1.  0.  0.  0.  0.]\n",
+      " [ 1.  1.  1.  0.  0. -1. -1.  0.  0.  0.  0.  0.]\n",
+      " [-1.  0.  0.  0.  0. -1.  0. -1.  0.  0.  0.  0.]\n",
+      " [ 0.  0. -1.  0. -1.  0. -1.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0. -1. -1.  0.  0.  1.  1.  1.  0.  0.  0.]\n",
+      " [ 1.  1.  1. -1.  0.  0.  0. -1.  0.  0.  0.  0.]\n",
+      " [ 0. -1.  0.  1.  1.  1. -1.  0.  0.  0.  0.  0.]\n",
+      " [ 0. -1.  0.  0.  0. -1.  1.  1.  1.  0.  0.  0.]\n",
+      " [ 1.  1.  1.  0. -1.  0.  0.  0. -1.  0.  0.  0.]\n",
+      " [-1.  0.  0.  1.  1.  1.  0.  0. -1.  0.  0.  0.]\n",
+      " [-1.  0.  0.  0. -1.  0.  0.  0. -1.  0.  0.  0.]\n",
+      " [ 0. -1.  0. -1.  0.  0.  1.  1.  1.  0.  0.  0.]\n",
+      " [ 1.  1.  1.  0.  0. -1.  0. -1.  0.  0.  0.  0.]\n",
+      " [ 0.  0. -1.  1.  1.  1. -1.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0. -1. -1.  0.  0.  0. -1.  0.  0.  0.  0.]\n",
+      " [ 0. -1.  0.  0.  0. -1. -1.  0.  0.  0.  0.  0.]\n",
+      " [-1.  0.  0.  0.  0. -1.  1.  1.  1.  0.  0.  0.]\n",
+      " [-1.  0.  0.  1.  1.  1.  0. -1.  0.  0.  0.  0.]\n",
+      " [ 1.  1.  1.  0. -1.  0. -1.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0. -1.  0. -1.  0.  1.  1.  1.  0.  0.  0.]\n",
+      " [ 0. -1.  0.  1.  1.  1.  0.  0. -1.  0.  0.  0.]\n",
+      " [ 1.  1.  1. -1.  0.  0.  0.  0. -1.  0.  0.  0.]\n",
+      " [ 0.  1.  0.  1.  0.  0.  0.  0.  1.  0.  0.  0.]\n",
+      " [ 1.  0.  0.  0.  1.  0. -1. -1. -1.  0.  0.  0.]\n",
+      " [ 0.  0.  1. -1. -1. -1.  0.  1.  0.  0.  0.  0.]\n",
+      " [-1. -1. -1.  0.  0.  1.  1.  0.  0.  0.  0.  0.]\n",
+      " [ 1.  0.  0.  0.  0.  1.  0.  1.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  1.  0.  1.  0.  1.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  1.  1.  0.  0. -1. -1. -1.  0.  0.  0.]\n",
+      " [-1. -1. -1.  1.  0.  0.  0.  1.  0.  0.  0.  0.]\n",
+      " [ 0.  1.  0. -1. -1. -1.  1.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  1.  0.  0.  0.  1. -1. -1. -1.  0.  0.  0.]\n",
+      " [-1. -1. -1.  0.  1.  0.  0.  0.  1.  0.  0.  0.]\n",
+      " [ 1.  0.  0. -1. -1. -1.  0.  0.  1.  0.  0.  0.]] \n",
       "\n",
       "Forces on cell = \n",
       " [[-0.00148273  0.00148273  0.00148273]\n",
@@ -334,10 +286,26 @@
    "execution_count": 7,
    "id": "7525ccbb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.  , 0.  , 0.  ],\n",
+       "       [0.5 , 0.  , 0.5 ],\n",
+       "       [0.5 , 0.5 , 0.5 ],\n",
+       "       [0.  , 0.  , 0.  ],\n",
+       "       [0.5 , 0.25, 0.75]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mgo_bands = Properties_output('../examples/data/mgo_BAND_dat.BAND')\n",
-    "mgo_bands = mgo_bands.read_cry_bands()"
+    "mgo_bands = mgo_bands.read_cry_bands()\n",
+    "mgo_bands.k_point_inp_coordinates"
    ]
   },
   {
@@ -555,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "9698e3ba",
    "metadata": {},
    "outputs": [],
@@ -591,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "90cba974",
    "metadata": {},
    "outputs": [
@@ -615,7 +583,7 @@
        " 'END\\n']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "1ce65af5",
    "metadata": {},
    "outputs": [],
@@ -655,8 +623,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "17eee31d",
+   "execution_count": 17,
+   "id": "933b281c",
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "id": "62c51e8e",
    "metadata": {},
    "outputs": [],
@@ -708,11 +676,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "59abc4f0",
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "id": "42fd2517",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -735,7 +701,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4af39a7e",
+   "id": "30fa6e6e",
    "metadata": {},
    "source": [
     "#### pdoss (ao)"
@@ -743,8 +709,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "4e117c08",
+   "execution_count": 20,
+   "id": "89f9c099",
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +723,7 @@
        " 'END\\n']"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,12 +767,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "id": "36f7ffd0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from crystal_functions.file_readwrite import write_cry_gui\n",
+    "from crystal_functions.file_readwrite import write_crystal_gui\n",
     "\n",
     "from pymatgen.core import Structure, Lattice\n",
     "from pymatgen.core.surface import SlabGenerator\n",
@@ -815,7 +781,7 @@
     "substrate = Structure.from_spacegroup(\"Fm-3m\", Lattice.cubic(4.217), [\"Mg\",'O'], [[0, 0, 0],[0.5,0.5,0.5]])\n",
     "\n",
     "#The dimensionality parameter is optional. The function will recognise it is a pymatgen bulk object\n",
-    "write_cry_gui('data/mgo_write_gui.gui',substrate,dimensionality=3)"
+    "write_crystal_gui('data/mgo_write_gui.gui',substrate,dimensionality=3)"
    ]
   },
   {
@@ -828,12 +794,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "id": "502ec530",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from crystal_functions.file_readwrite import write_cry_gui\n",
+    "from crystal_functions.file_readwrite import write_crystal_gui\n",
     "\n",
     "from pymatgen.core import Structure, Lattice\n",
     "from pymatgen.core.surface import SlabGenerator\n",
@@ -844,7 +810,7 @@
     "substrate = SlabGenerator(substrate, (1,0,0), 5., 10., center_slab=False).get_slab()\n",
     "\n",
     "#The dimensionality parameter is optional. The function will recognise it is a pymatgen Slab object\n",
-    "write_cry_gui('data/mgo_100_write_gui.gui',substrate,dimensionality=2)"
+    "write_crystal_gui('data/mgo_100_write_gui.gui',substrate,dimensionality=2)"
    ]
   }
  ],
