--- a/unit_test/test_notebook.ipynb
+++ b/unit_test/test_notebook.ipynb
@@ -5,7 +5,11 @@
    "id": "605cc082",
    "metadata": {},
    "source": [
-    "# Unit tests notebook"
+    "# Unit tests notebook\n",
+    "\n",
+    "For testing the crystal_functions please run this notebook.\n",
+    "\n",
+    "Alternatively, you can run test_all(folder_path) from command line."
    ]
   },
   {
@@ -26,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "9352e624",
    "metadata": {},
    "outputs": [
@@ -105,17 +109,14 @@
        "opt_to_sp   True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import sys\n",
-    "sys.path.insert(1,'../crystal_functions/')\n",
-    "from unit_test import *\n",
+    "from crystal_functions.unit_test import *\n",
     "import pandas as pd\n",
-    "#from crystal_functions.unit_test import *\n",
     "\n",
     "input_test = crystal_input_test('./data_test/')\n",
     "\n",
@@ -132,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "80e29c9f",
    "metadata": {},
    "outputs": [
@@ -140,7 +141,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File for input testing: ./data_test/mgo.out\n"
+      "Files for input testing: ./data_test/mgo.out and ./data_test/mgo_optgeom.out\n"
      ]
     },
     {
@@ -241,15 +242,13 @@
        "get_mulliken_charges    True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import sys\n",
-    "sys.path.insert(1,'../crystal_functions/')\n",
-    "from unit_test import *\n",
+    "from crystal_functions.unit_test import *\n",
     "import pandas as pd\n",
     "\n",
     "output_test = crystal_output_test('./data_test/')\n",
@@ -267,22 +266,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "2fddc51b",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.         2.12011001 2.12011001]\n",
-      " [2.12011001 0.         2.12011001]\n",
-      " [2.12011001 2.12011001 0.        ]]\n",
-      "[[-1.29819297e-16  2.12011001e+00  2.12011001e+00]\n",
-      " [ 2.12011001e+00  0.00000000e+00  2.12011001e+00]\n",
-      " [ 2.12011001e+00  2.12011001e+00  2.59638594e-16]]\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -326,15 +313,13 @@
        "cry_gui2pmg  True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import sys\n",
-    "sys.path.insert(1,'../crystal_functions/')\n",
-    "from unit_test import *\n",
+    "from crystal_functions.unit_test import *\n",
     "import pandas as pd\n",
     "\n",
     "output_test = convert_test('./data_test/')\n",
@@ -344,65 +329,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "939711e5",
+   "execution_count": 5,
+   "id": "05f5b390",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "***Testing of the file_readwrite module:***\n",
+      "\n",
+      "**Testing of the Crystal_input class:**\n",
+      "\n",
+      "File for input testing: ./data_test/mgo.d12\n",
+      "\n",
+      "geom_block True\n",
+      "bs_block True\n",
+      "func_block True\n",
+      "scf_block True\n",
+      "add_ghost True\n",
+      "sp_to_opt True\n",
+      "opt_to_sp True\n",
+      "\n",
+      "**Testing of the Crystal_output class:**\n",
+      "\n",
+      "Files for input testing: ./data_test/mgo.out and ./data_test/mgo_optgeom.out\n",
+      "\n",
+      "converged True\n",
+      "get_dimensionality True\n",
+      "get_final_energy True\n",
+      "get_scf_convergence True\n",
+      "get_num_cycles True\n",
+      "get_fermi_energy True\n",
+      "get_primitive_lattice True\n",
+      "get_reciprocal_lattice True\n",
+      "get_band_gap True\n",
+      "get_last_geom True\n",
+      "get_symm_ops True\n",
+      "get_forces True\n",
+      "get_mulliken_charges True\n",
+      "\n",
+      "***Testing of the convert module:***\n",
+      "\n",
+      "cry_out2pmg True\n",
+      "cry_gui2pmg True\n"
+     ]
     }
    ],
    "source": [
-    "\n",
-    "import numpy as np\n",
-    "a = np.array([[0.    , 2.1085, 2.1085],\n",
-    "       [2.1085, 0.    , 2.1085],\n",
-    "       [2.1085, 2.1085, 0.    ]])\n",
-    "b = np.array([[0.    , 2.1085, 2.1085],\n",
-    "       [2.1085, 0.    , 2.1085],\n",
-    "       [2.1085, 2.1085, 0.    ]])\n",
-    "\n",
-    "np.all(a == b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "acd4de55",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['MGO BULK - GEOMETRY TEST\\n',\n",
-       " 'CRYSTAL\\n',\n",
-       " '0 0 0\\n',\n",
-       " '225\\n',\n",
-       " '4.217\\n',\n",
-       " '2\\n',\n",
-       " '12 0.    0.    0.\\n',\n",
-       " '8 0.5   0.5   0.5\\n',\n",
-       " 'END\\n']"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from crystal_functions.file_readwrite import Crystal_input\n",
-    "tst = Crystal_input('./data_test/mgo.d12')\n",
-    "tst.sp_to_opt()\n",
-    "tst.opt_to_sp()\n",
-    "tst.geom_block"
+    "from crystal_functions.unit_test import *\n",
+    "test_all('./data_test/')"
    ]
   }
  ],
