--- a/examples/convert.ipynb
+++ b/examples/convert.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d6df0949",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "814523e2",
    "metadata": {
     "scrolled": true
@@ -38,19 +38,12 @@
     {
      "data": {
       "text/plain": [
-       "Structure Summary\n",
-       "Lattice\n",
-       "    abc : 2.998288327305232 2.998288327305232 2.998288327305232\n",
-       " angles : 59.99999999999999 59.99999999999999 59.99999999999999\n",
-       " volume : 19.059222678792402\n",
-       "      A : 0.0 2.12011000819 2.12011000819\n",
-       "      B : 2.12011000819 0.0 2.12011000819\n",
-       "      C : 2.12011000819 2.12011000819 0.0\n",
-       "PeriodicSite: Mg (0.0000, 0.0000, 0.0000) [0.0000, 0.0000, 0.0000]\n",
-       "PeriodicSite: O (2.1201, 2.1201, 2.1201) [0.5000, 0.5000, 0.5000]"
+       "array([[0.        , 2.12011001, 2.12011001],\n",
+       "       [2.12011001, 0.        , 2.12011001],\n",
+       "       [2.12011001, 2.12011001, 0.        ]])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +51,51 @@
    "source": [
     "cry_output = Crystal_output('data/mgo_optgeom.out')\n",
     "pmg_structure = cry_out2pmg(cry_output,initial=False)\n",
-    "pmg_structure"
+    "pmg_structure.lattice.matrix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac0cd5f3",
+   "metadata": {},
+   "source": [
+    "### cry_gui2pmg function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3f63de10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from crystal_functions.file_readwrite import Crystal_output\n",
+    "from crystal_functions.convert import cry_gui2pmg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "69beee0a",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.     , 0.     , 0.     ],\n",
+       "       [2.12011, 2.12011, 2.12011]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pmg_structure = cry_gui2pmg('data/mgo_optgeom.gui')\n",
+    "pmg_structure.cart_coords"
    ]
   },
   {
