Add example files

--- a/examples/file_readwrite.ipynb
+++ b/examples/file_readwrite.ipynb
@@ -91,7 +91,7 @@
     {
      "data": {
       "text/plain": [
-       "<crystal_functions.file_readwrite.Crystal_output at 0x107d580a0>"
+       "<crystal_functions.file_readwrite.Crystal_output at 0x1037360a0>"
       ]
      },
      "execution_count": 4,
