Added examples in the plot notebook, added error check to plot_cry_es, added comment plot_cry_es

--- a/examples/plot.ipynb
+++ b/examples/plot.ipynb
@@ -208,12 +208,158 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'cfplt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/sg/zkmv2k2s1qs2g3vt9zc_lllc0000gn/T/ipykernel_33819/2733487492.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m cfplt.plot_cry_bands(Data, mode='compare',energy_range=[-5, 5], k_labels=['Gamma', 'M', 'K', 'A', 'L', 'H', 'K'], color='forestgreen', fermi='red',\n\u001b[0m\u001b[1;32m      2\u001b[0m                      linestl='--', linewidth=0.5, figsize=(15,15))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'cfplt' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "cfplt.plot_cry_bands(Data, mode='compare',energy_range=[-5, 5], k_labels=['Gamma', 'M', 'K', 'A', 'L', 'H', 'K'], color='forestgreen', fermi='red',\n",
+    "                     linestl='--', linewidth=0.5, figsize=(15,15))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'crystal_functions'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/sg/zkmv2k2s1qs2g3vt9zc_lllc0000gn/T/ipykernel_17812/1555601564.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mcrystal_functions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfile_readwrite\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mProperties_output\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcrystal_functions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mcfplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'crystal_functions'"
+     ]
+    }
+   ],
+   "source": [
+    "from crystal_functions.file_readwrite import Properties_output\n",
+    "import crystal_functions.plot as cfplt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Overlapping Dos Plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Properties_output' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/sg/zkmv2k2s1qs2g3vt9zc_lllc0000gn/T/ipykernel_17812/2936795374.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mData\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mProperties_output\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'data/doss_96.doss'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_cry_doss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mcfplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot_cry_doss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mData\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'projection1'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'projection2'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'projection3'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'total'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Properties_output' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "Data= Properties_output('data/doss_96.doss').read_cry_doss()\n",
+    "cfplt.plot_cry_doss(Data, labels=['projection1', 'projection2', 'projection3', 'total'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can also customize the dos plots with a series of args in the plot function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'cfplt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/sg/zkmv2k2s1qs2g3vt9zc_lllc0000gn/T/ipykernel_17812/604638499.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m cfplt.plot_cry_doss(Data, color=['blue', 'indigo', 'midgrey', 'crimson'], fermi='red', labels=[\n\u001b[0m\u001b[1;32m      2\u001b[0m                     'projection1', 'projection2', 'projection3', 'total'], figsize=(24,10), linestl=['dotted', '--', 'dashdot','-'], \n\u001b[1;32m      3\u001b[0m                     linewidth=1.5, title='test', beta='down', energy_range=[-2,2], dos_range=[0,1000])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'cfplt' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "cfplt.plot_cry_doss(Data, color=['blue', 'indigo', 'midgrey', 'crimson'], fermi='red', labels=[\n",
+    "                    'projection1', 'projection2', 'projection3', 'total'], figsize=(24,10), linestl=['dotted', '--', 'dashdot','-'], \n",
+    "                    linewidth=1.5, title='test', beta='down', energy_range=[-2,2], dos_range=[0,1000])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Furthermore you can plot only selected projection using the prj kwargs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'cfplt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/sg/zkmv2k2s1qs2g3vt9zc_lllc0000gn/T/ipykernel_17812/2593576319.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m cfplt.plot_cry_doss(Data, color=['blue', 'indigo', 'midgrey', 'crimson'], fermi='red', labels=[\n\u001b[0m\u001b[1;32m      2\u001b[0m                     'projection1', 'projection2', 'projection3', 'total'], figsize=(24, 10), linestl=['dotted', '--', 'dashdot', '-'],\n\u001b[1;32m      3\u001b[0m                     linewidth=1.5, title='test', beta='down', energy_range=[-2, 2], dos_range=[0, 1000], prj=['1','2','3'])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'cfplt' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "cfplt.plot_cry_doss(Data, color=['blue', 'indigo', 'midgrey', 'crimson'], fermi='red', labels=[\n",
+    "                    'projection1', 'projection2', 'projection3', 'total'], figsize=(24, 10), linestl=['dotted', '--', 'dashdot', '-'],\n",
+    "                    linewidth=1.5, title='test', beta='down', energy_range=[-2, 2], dos_range=[0, 1000], prj=['1','2','3'])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Projection Single Plot"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cfplt.plot_cry_bands(Data, mode='compare',energy_range=[-5, 5], k_labels=['Gamma', 'M', 'K', 'A', 'L', 'H', 'K'], color='forestgreen', fermi='red',\n",
-    "                     linestl='--', linewidth=0.5, figsize=(15,15))\n"
+    "cfplt.plot_cry_doss(Data, )"
    ]
   }
  ],
