Add 0D example + files

--- a/examples/file_readwrite.ipynb
+++ b/examples/file_readwrite.ipynb
@@ -74,12 +74,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "0a495139",
    "metadata": {},
    "outputs": [],
    "source": [
     "from crystal_functions.file_readwrite import Crystal_output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c93a21e",
+   "metadata": {},
+   "source": [
+    "#### 3D system"
    ]
   },
   {
@@ -257,6 +265,102 @@
   },
   {
    "cell_type": "markdown",
+   "id": "97ab3742",
+   "metadata": {},
+   "source": [
+    "#### 0D system"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1cc03b02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "co_output = Crystal_output('data/co.out')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "7798fb5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final energy = -3037.8807073392627 eV \n",
+      "\n",
+      "Fermi energy = -7.247937617924001 eV \n",
+      "\n",
+      "WARNING: no lattice vectors found in the output file. lattice = []\n",
+      "Primitive lattice \n",
+      " None \n",
+      "\n",
+      "Reciprocal lattice \n",
+      " None \n",
+      "\n",
+      "Band gap = 10.9012 eV \n",
+      "\n",
+      "Last geometry = \n",
+      " [[[12.0, 0.0, 0.0], [0.0, 12.0, 0.0], [0.0, 0.0, 12.0]], [6, 8], [[-0.06372620712817, -0.03982887945511, -0.03186310356409], [0.8637262071282, 0.5398288794551, 0.4318631035641]]] \n",
+      "\n",
+      "Symmetry operators = \n",
+      " None \n",
+      "\n",
+      "Forces on cell = \n",
+      " [] \n",
+      " Forces on atoms = \n",
+      " [[-0.48652346 -0.30407721 -0.24326191]\n",
+      " [ 0.48652346  0.30407721  0.24326191]] \n",
+      " Gradient = \n",
+      " ['0.881299', '0.033031', '0.014444', '0.005748', '0.000292', '0.000266'] \n",
+      "\n",
+      "Total energy = \n",
+      " [-3050.4186324  -3037.81431056 -3037.86470591 -3037.87933672\n",
+      " -3037.88070722 -3037.88070734 -3037.88070734] \n",
+      " Delta energy = \n",
+      " [-3.04767680e+03  1.25988782e+01 -5.03410900e-02 -1.46397332e-02\n",
+      " -1.37145456e-03 -1.17281134e-07 -7.48313500e-10] \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Final energy\n",
+    "print(\"Final energy = %s eV \\n\" % co_output.get_final_energy())\n",
+    "\n",
+    "#Fermi energy\n",
+    "print(\"Fermi energy = %s eV \\n\" % co_output.get_fermi_energy())\n",
+    "\n",
+    "#Primitive lattice\n",
+    "print(\"Primitive lattice \\n %s \\n\" % co_output.get_primitive_lattice())\n",
+    "\n",
+    "#Reciprocal lattice\n",
+    "print(\"Reciprocal lattice \\n %s \\n\" % co_output.get_reciprocal_lattice())\n",
+    "\n",
+    "#Band gap\n",
+    "print(\"Band gap = %s eV \\n\" % co_output.get_band_gap())\n",
+    "\n",
+    "#Last geometry\n",
+    "print(\"Last geometry = \\n %s \\n\" % co_output.get_last_geom())\n",
+    "\n",
+    "#Symmetry operators\n",
+    "print(\"Symmetry operators = \\n %s \\n\" % co_output.get_symm_ops())\n",
+    "\n",
+    "#Forces\n",
+    "print(\"Forces on cell = \\n %s \\n Forces on atoms = \\n %s \\n Gradient = \\n %s \\n\" % (co_output.get_forces(grad=True)[0],\n",
+    "                                                                                    co_output.get_forces(grad=True)[1],\n",
+    "                                                                                    co_output.grad))\n",
+    "#Scf convergence\n",
+    "print(\"Total energy = \\n %s \\n Delta energy = \\n %s \\n\" % (co_output.get_scf_convergence()[0],\n",
+    "                                                           co_output.get_scf_convergence()[1]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bb1f72fe",
    "metadata": {},
    "source": [
@@ -265,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "844eb99c",
    "metadata": {},
    "outputs": [],
@@ -858,7 +962,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
